# pyspark-pipeline-framework

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
docs/: api.rst  architecture.rst  conf.py  contributing.rst  deployment.rst  getting-started.rst  glossary.rst  index.rst  quickstart.rst  scope.rst
docs/api/: core-audit.rst  core-component.rst  core-config.rst  core-metrics.rst  core-quality.rst  core-resilience.rst  core-schema.rst  core-secrets.rst  examples.rst  index.rst  runner.rst  runtime-dataflow.rst  runtime-loader.rst  runtime-schema-converter.rst  runtime-session.rst  runtime-streaming.rst
docs/features/: audit.rst  batch-pipelines.rst  checkpoint.rst  data-quality.rst  hooks.rst  resilience.rst  secrets.rst  streaming-pipelines.rst
docs/user-guide/: audit.rst  checkpoint.rst  components.rst  config-validation.rst  configuration.rst  data-quality.rst  hooks.rst  migration.rst  resilience.rst  schema-contracts.rst  secrets.rst  streaming.rst
examples/: customer_etl.conf  load_config.py  local_demo.conf  pipeline.conf  run_customer_etl.py  run_local_demo.py
examples/resources/: customers.csv
src/pyspark_pipeline_framework/: __init__.py  __main__.py
src/pyspark_pipeline_framework/core/: __init__.py  utils.py
src/pyspark_pipeline_framework/core/audit/: __init__.py  filters.py  sinks.py  types.py
src/pyspark_pipeline_framework/core/component/: __init__.py  base.py  exceptions.py  protocols.py
src/pyspark_pipeline_framework/core/config/: __init__.py  base.py  component.py  hooks.py  loader.py  pipeline.py  presets.py  retry.py  secret_resolver.py  secrets.py  spark.py  validator.py
src/pyspark_pipeline_framework/core/metrics/: __init__.py  exporters.py  registry.py
src/pyspark_pipeline_framework/core/quality/: __init__.py  checks.py  types.py
src/pyspark_pipeline_framework/core/resilience/: __init__.py  circuit_breaker.py  retry.py
src/pyspark_pipeline_framework/core/schema/: __init__.py  definition.py  validator.py
src/pyspark_pipeline_framework/core/secrets/: __init__.py  audit.py  base.py  providers.py  resolver.py
src/pyspark_pipeline_framework/examples/: __init__.py  batch.py  streaming.py
src/pyspark_pipeline_framework/runner/: __init__.py  audit_hooks.py  checkpoint.py  cli.py  component_executor.py  hooks.py  hooks_builtin.py  quality_hooks.py  result.py  simple_runner.py
src/pyspark_pipeline_framework/runtime/: loader.py  schema_converter.py
src/pyspark_pipeline_framework/runtime/dataflow/: __init__.py  base.py  schema.py
src/pyspark_pipeline_framework/runtime/session/: __init__.py  wrapper.py
src/pyspark_pipeline_framework/runtime/streaming/: __init__.py  base.py  hooks.py  sinks.py  sources.py
tests/: __init__.py  factories.py
tests/integration/: conftest.py  test_batch_components_spark.py  test_dataflow_spark.py  test_quality_checks_spark.py  test_schema_converter_spark.py  test_session_wrapper_spark.py  test_streaming_spark.py
tests/unit/: test_concurrency.py  test_properties.py
tests/unit/core/: test_utils.py
tests/unit/core/audit/: test_filters.py  test_sinks.py  test_types.py
tests/unit/core/component/: test_base.py
tests/unit/core/config/: test_component.py  test_loader.py  test_pipeline.py  test_presets.py  test_resilience_policy.py  test_retry.py  test_secret_resolver.py  test_spark.py  test_validator.py
tests/unit/core/metrics/: test_exporters.py  test_registry.py
tests/unit/core/quality/: test_checks.py  test_types.py
tests/unit/core/resilience/: test_circuit_breaker.py  test_retry.py
tests/unit/core/schema/: test_definition.py  test_validator.py
tests/unit/core/secrets/: test_audit.py  test_base.py  test_providers.py  test_resolver.py
tests/unit/examples/: test_batch.py  test_streaming.py
tests/unit/runner/: test_audit_hooks.py  test_checkpoint.py  test_cli.py  test_component_executor.py  test_hooks.py  test_hooks_builtin.py  test_integration.py  test_quality_hooks.py  test_result.py  test_simple_runner.py
tests/unit/runtime/: test_loader.py  test_schema_converter.py
tests/unit/runtime/dataflow/: test_base.py  test_schema.py
tests/unit/runtime/session/: test_wrapper.py
tests/unit/runtime/streaming/: test_base.py  test_hooks.py  test_sinks.py  test_sources.py
