[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyspark-pipeline-framework"
version = "0.1.0"
description = "Configuration-driven PySpark pipeline framework with HOCON"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9,<3.14"
authors = [{name = "Your Name", email = "you@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["pyspark", "spark", "pipeline", "etl", "data-engineering", "hocon"]

dependencies = [
    "dataconf>=3.4",
    "structlog>=23.0",
]

[project.optional-dependencies]
spark = ["pyspark>=3.4,<5.0"]
aws = ["boto3>=1.28"]
vault = ["hvac>=1.0"]
metrics = ["prometheus-client>=0.17", "opentelemetry-api>=1.20"]
all = ["pyspark-pipeline-framework[spark,aws,vault,metrics]"]
dev = [
    "pyspark-pipeline-framework[all]",
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.5",
    "ruff>=0.1",
    "black>=23.0",
    "isort>=5.12",
    "pre-commit>=3.4",
    "sphinx>=7.0",
    "furo",
    "myst-parser",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
]

[project.scripts]
ppf-run = "pyspark_pipeline_framework.runner.cli:main"

[project.urls]
Homepage = "https://github.com/OWNER/pyspark-pipeline-framework"
Documentation = "https://pyspark-pipeline-framework.readthedocs.io"
Repository = "https://github.com/OWNER/pyspark-pipeline-framework"
Issues = "https://github.com/OWNER/pyspark-pipeline-framework/issues"

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "examples", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyspark_pipeline_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "spark: marks tests requiring Spark",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src/pyspark_pipeline_framework"]
branch = true
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
    "A",     # flake8-builtins
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint
    "PERF",  # perflint (performance)
    "FLY",   # flynt (f-string conversion)
    "TID",   # flake8-tidy-imports
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # use of assert (common in tests)
    "PLR0913", # too many arguments
    "PLR2004", # magic value in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "T20",    # print allowed in tests
    "PLR2004", # magic values ok in tests
]
"examples/**/*.py" = ["T20"]  # print allowed in examples

[tool.ruff.lint.isort]
known-first-party = ["pyspark_pipeline_framework"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["pyspark_pipeline_framework"]

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

# Strict mode options
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true

# Type checking
check_untyped_defs = true
disallow_untyped_calls = false  # Too strict for PySpark
disallow_untyped_defs = false   # Too strict for PySpark
disallow_incomplete_defs = true
disallow_untyped_decorators = false  # PySpark uses many decorators
no_implicit_optional = true
no_implicit_reexport = true

# Error reporting
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Per-module overrides for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "dataconf.*",
    "structlog.*",
    "boto3.*",
    "hvac.*",
    "prometheus_client.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used check (common in tests)
